2008-03-29  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* README: Update to match the current UI.
	* TODO: Remove deprecated item.
	* COPYING: Add copyright notice.
	* autogen.sh: Remove useless libtool stuff.

2008-03-26  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/AlarmConfigDialog.cs, src/ConfigurationDialog.cs: Remove useless GConf
	  reference.
	* configure.ac: Use the new pkg-config files from banshee 0.98.2. Comment
	  out the PLUGINDIR stuff for now.

2008-03-24  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* build/build.mk: Fix make distcheck.

2008-03-24  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Alarm.cs: Use TogglePlaying() to start playing.

2008-03-24  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Makefile.am, build/gconf-schema-rules, build/build.mk, autogen.sh,
	  alarm.mdp: Improve build system.
	* src/Alarm.cs, src/VolumeFade.cs: Clean up logs.
	* src/AlarmClockService.cs, src/AlarmMenu.xml, src/ConfigurationDialog.cs,
	  src/ConfigurationWidget.cs: Convert the configuration stuff to a dialog,
	  and add it to the menu.

2008-03-24  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/ConfigurationWidget.cs, src/AlarmPlugin.cs, src/Alarm.cs,
	  src/SleepTimerConfigDialog.cs, src/GConfSchemas.cs,
	  src/AlarmConfigDialog.cs, src/Makefile.am,
	  src/Banshee.AlarmClock.addin.xml, src/VolumeFade.cs,
	  src/AlarmClockService.cs, build/gconf-schema-rules, configure.ac,
	  alarm.mdp: Port to Mono.Addins and the new banshee codebase.

2008-03-21  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	Version 0.3.2 released. Works only with banshee 0.13.2 and below. 

2008-03-21  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/AlarmPlugin.cs, src/Alarm.cs, src/AlarmConfigDialog.cs: Fix alarm time
	  reset.

2008-03-21  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Alarm.cs: Do not crash when the Alarm thread is interrupted.
	* configure.ac: Update to version 0.3.2
